--- a/server/config.json
+++ b/server/config.json
@@ -15,7 +15,7 @@
   "baseSizeConfig": {
     "2tdm": 12
   },
-  "gm": "2tdm",
+  "gm": "ffa",
   "accountsEnabled": true,
   "ipBanDatabaseEnabled" : false,
   "developerPowers": true,
