--- a/server/config.json
+++ b/server/config.json
@@ -21,5 +21,6 @@
   "developerPowers": true,
   "publicCheatingLevel": 0,
   "botAmount": 1,
-  "maxDominators": 3
+  "maxPortals": 1,
+  "maxDominators": 1
 }
